--- a/app/app/views/presentation/somos.html.erb
+++ b/app/app/views/presentation/somos.html.erb
@@ -2,12 +2,15 @@
 <p>
 La Red Nacional de Aprendizaje y Servicio Chile reúne  a profesores, estudiantes, universidades, colegios, agrupaciones civiles y en general a todas las personas y organizaciones en Chile que estén interesadas en esta metodología.
 </p>
-<p>
-REASE se organiza con una secretaría ejecutiva, es la única comisión en la que los miembros de la organización se postulan para someterse a la votación del resto de los miembros activos. Ésta comisión es la encargada de realizar las reuniones bimensuales que tiene REASE y de mantener los statutos internos de la organización.
-</p>
-<p>
-Además, existen otras comisiones, en las que los miembros de la organización eligen a libre elección en cuál desea participar y prestar servicio durante un año. Por ejemplo, está la comisión de talleres que organiza cursos de iniciación al A+S, levantamiento de necesidades comunitarias, reflexión sobre la acción, entre otros que se presentan de manera itinerante por distintas organizaciones (casas de estudio, socios o vinculadores sociales). Otras comisiones son la comisión de sistematización que permite definir los estándares de reporte de los proyectos de A+S de manera de tener un banco nacional de este tipo de iniciativas; otra es la comisión de investigación y de comunicaciones. 
-</p>
+<p>REASE se organiza a través de secretarías, las cuales son: </p>
+<ul id="estatutos" >
+	<li>Secretaría Ejecutiva: Esta comisión está enfocada en hacer un seguimiento al trabajo de las demás comisiones y coordinar el trabajo de ellas, para ello cada miembro de esta comisión se encuentra también trabajando en algunas de las comisiones que se describirán a continuación. Además, se encarga de proponer temas y preparar las reuniones ampliadas de la red.</li><br>
+	<li>Comunicaciones: Está comisión busca difundir la labor realizada por REASE mediante diferentes mecanismos, como la elaboración de boletines o videos promocionales. El actual sitio web de la red y la presencia de la organización en las redes sociales, nace de la labor de esta comisión, como también el desarrollo de este trabajo.</li><br>
+	<li>Sistematización: Esta comisión busca estandarizar las experiencias de Aprendizaje y Servicio. Su trabajo generó durante el año pasado, la elaboración de un Formulario de Sistematización, el que durante este año ha sido aplicado a las experiencias de A+S en todas las instituciones pertenecientes a la red. </li><br>
+	<li>Talleres: Esta comisión busca llevar a cabo diferentes talleres de Aprendizaje y Servicio, que permitan acercar a los docentes y estudiantes a esta metodología. </li><br>
+	<li>Encuentro: Integrada por Gabriela Valenzuela, Gema Santander  (U Sto. Tomás), Rubén Vidal (H. de Cristo), Loreto Martínez (H. de Cristo) y Chantal Jouannet. Comisión encargada de organizar el encuentro anual de Aprendizaje y Servicio en Chile, además de gestionar los patrocinadores para el mismo. Actualmente se encuentra gestionando el próximo encuentro que se realizará en enero del próximo año.</li>
+</ul>
+<br>
 <div class="somos" >
 	<table>
 		<tr><td>ORGANIZACIONES ADHERIDAS </td></tr>
