--- a/app/app/views/devise/passwords/new.html.erb
+++ b/app/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,15 @@
-<h2>¿Olvidaste tu password?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+<h1 class="tituloSesion">¿Olvidó su contraseña?</h1>
+<h2 class="tituloSesion"> Ingrese su mail para recibir instrucciones de recuperación de contraseña<h2>
+<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { class: 'form-signin', method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email, :class => 'form-control', :placeholder => 'Correo electrónico' %>
   </div>
-
+  <br>
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= f.submit "Recuperar contraseña",:id => 'boton', :class => 'btn btn-lg btn-block' %>
   </div>
+	<%= render "devise/shared/links" %>
 <% end %>
 
-<%= render "devise/shared/links" %>
