--- a/app/app/views/devise/registrations/new.html.erb
+++ b/app/app/views/devise/registrations/new.html.erb
@@ -2,11 +2,21 @@
   <div class="row">
     <div class="col-sm-12 col-md-6 col-md-offset-3">
       <!--h1 class="text-center login-title">Ingrese sus datos para conectarse a REASE</h1-->
-      <h1> Ingrese sus datos para registrarse a REASE </h1>
-      <div class="account-wall">
+      <h1 class="tituloSesion"> Ingrese sus datos para registrarse a REASE </h1>
+      <div>
 
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name),  html: {class: 'form-signin'}) do |f| %>
           <%= devise_error_messages! %>
+         
+          <div class="field">
+            <p><%= f.label :name, "Nombres" %></p>
+            <%= f.text_field :name, :class => 'form-control',autofocus: true  %>
+          </div>
+
+          <div class="field">
+            <p><%= f.label :last_name, "Apellidos" %></p>
+            <%= f.text_field :last_name, :class => 'form-control',autofocus: true  %>
+          </div>
 
           <div class="field">
             <p><%= f.label :email, "Correo electrónico" %></p>
@@ -29,9 +39,8 @@
           <div class="actions">
             <%= f.submit "Enviar Registro",:id => 'boton', :class => 'btn btn-lg btn-block'%>
           </div>
-
-
-          <br><%= render "devise/shared/links" %>
+          <%= render "devise/shared/links" %>
+          
         <% end %>
 
        
