--- a/app/app/views/layouts/application.html.erb
+++ b/app/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "App" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "REASE" %></title>
     <%= csrf_meta_tags %>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -54,9 +54,16 @@
                 <li role="presentation" class="<%= 'active' if current_page?(presentation_somos_path) %>">
                     <%= link_to "¿Quiénes somos?", presentation_somos_path %>
                 </li>
-                <li role="presentation" class="<%= 'active' if current_page?(presentation_contacto_path) %>">
-                    <%= link_to "Contacto", presentation_contacto_path %>
+                <li role="presentation" class="<%= 'active' if current_page?(presentation_estatutos_path) %>">
+                    <%= link_to "Estatutos", presentation_estatutos_path %>
                 </li>
+                <li role="presentation" class="<%= 'active' if current_page?(presentation_contacto_path) %>">
+                    <%= link_to "Contacto", root_path %>
+                </li>
+                <li id="prueba">
+                    Miembros activos: 43
+                </li>
+
                 
             </ul>
         </nav>
@@ -73,7 +80,7 @@
             </div>
             <div class="panel-body">
 
-                <% if not user_signed_in? %>
+                <% unless user_signed_in? %>
                     <li>
                     <%= link_to "Conectarse", new_user_session_path, :id => 'boton' , :class => 'btn btn-lg btn-block'%>
                     </li>
