--- a/app/app/views/layouts/bootstrap.html.erb
+++ b/app/app/views/layouts/bootstrap.html.erb
@@ -37,41 +37,26 @@
     <%= javascript_include_tag "application" %>
   </head>
   <body>
+    <header>
+      <%= link_to(image_tag("logo.png", id: "logo"),root_path) %>
+        <ul id="BarraNavegadora" class="nav nav-tabs navbar-fixed-top">
+          <li role="presentation" class="<%= 'active' if current_page?(root_path) %>">
+            <%= link_to "Solicitudes", root_path %>
+          </li>
+          <li><%= link_to('Logout', destroy_user_session_path, :method => :delete) %>  </li>
+        </ul>
+    </header>
+    <section id="contenido">
+        <%= bootstrap_flash %>
+        <%= yield %>
 
-    <div class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Rease</a>
-        <div class="navbar-collapse collapse navbar-responsive-collapse">
-          <ul class="nav navbar-nav">
-            <li><%= link_to "Requests", "/requests"  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to('Logout', destroy_user_session_path, :method => :delete) %>  </li>
-          </ul>
+    <footer>
+        <!--Pie de página-->
+        <div  id="pies" class = "navbar-default ">
+                REASE - Red Nacional de Aprendizaje y Servicio<br>
+                Contacto: reasechile@gmail.com
         </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-9">
-          <%= bootstrap_flash %>
-          <%= yield %>
-        </div>
-      </div><!--/row-->
-
-      <footer>
-        <p>&copy; Rease 2015</p>
-      </footer>
-
-    </div> <!-- /container -->
+    </footer>
 
   </body>
 </html>
