--- a/app/app/views/presentation/aprendizaje.html.erb
+++ b/app/app/views/presentation/aprendizaje.html.erb
@@ -11,19 +11,19 @@
 			<%= image_tag("aprendizaje/etapas.jpg", id: "imgAS") %>
 		</div>
 	</div>
-	<p>
-		<br><br>
-		El A+S promueve la adquisición de conocimientos profundos y la formación de valores a través de actividades docentes de servicio a la comunidad  porque se sabe que retenemos: 
-		<br><br>
-		- 10% de lo que oímos <br>
-		- 15% de lo que vemos <br>
-		- 20% de lo que vemos y oímos <br>
-		- 80% de lo que experimentamos activamente. <br>
-		<br>
-		En el caso de A+S, éstos cuatro elementos del aprender-haciendo se conjugan plenamente.
-		<br><br>
-		Además, ésta metodología tiene la diferencia en la cantidad de actores que participan, las metologías comunes contemplan a un docente con sus estudiantes dentro de un aula. Pues bien, el A+S agrega a un nuevo miembro activo llamado "Socio Comunitario". El socio comunitario será el representante de la comunidad en que los estudiantes trabajarán y aportará con la información y recursos que sean necesarios.<br>
-	</p>
+	<p>El A+S promueve la adquisición de conocimientos profundos y la formación de valores a través de actividades docentes de servicio a la comunidad  porque se sabe que retenemos: </p>
+	<ul id = "estatutos">
+		<li>10% de lo que oímos</li>
+		<li>15% de lo que vemos</li>
+		<li>20% de lo que vemos y oímos</li>
+		<li>80% de lo que experimentamos activamente.</li>
+	</ul>
+	<p>En el caso de A+S, éstos cuatro elementos del aprender-haciendo se conjugan plenamente.</p>
+		
+	<p>Además, ésta metodología tiene la diferencia en la cantidad de actores que participan, las metologías comunes contemplan a un docente con sus estudiantes dentro de un aula. Pues bien, el A+S agrega a dos nuevos miembros activos llamados: "Socio Comunitario" y "Vinculador social". El socio comunitario será el representante de la comunidad en que los estudiantes trabajarán y aportará con la información y recursos que sean necesarios.</p>
+
+	<p>Y el Vinculador social: Actúa como intermediario entre el docente y el socio comunitario para realizar la actividad de A+S. Hay universidades que cuentan con con área encargada de realizar esta actividad, como CREAS de la Universidad Alberto Hurtado. También pueden considerarse vinculadores sociales instituciones como el Hogar de Cristo o Un techo para Chile.</p>
+
 	<div id="panelImg" class="panel panel-default">	
 		<div class="panel-heading">
 			Metodología del A+S
@@ -32,10 +32,8 @@
 			<%= image_tag("aprendizaje/tridente.jpg", id: "imgAS") %>
 		</div>
 	</div>
-	<br><br> 
-	<p>
-		Y éstos tres actores (docente, estudiantes y socio comunitario) son los que interactúan para poder llevar a cabo el proyecto del que son parte. A+S, describe los roles de cada miembro de la siguiente forma:  <br><br>
-	</p>
+
+	<p>Y éstos cuatro actores (docente, estudiantes, socio comunitario y vinculador social) son los que interactúan para poder llevar a cabo el proyecto del que son parte. A+S, describe los roles de tres de los miembros de la siguiente forma:</p>
 	
 	<div id="panelImg" class="panel panel-default">	
 		<div class="panel-heading">
