--- a/app/app/views/presentation/contacto.html.erb
+++ b/app/app/views/presentation/contacto.html.erb
@@ -4,26 +4,19 @@
 		Si quieres unirte a nuestra organización, tienes sugerencias que hacer o simplemente tienes interés y quieres saber más sobre Aprendizaje y Servicio.
 		<br>¡ Muchas gracias !<br>
 	</p>
-
-	<div id="panelComentario" class="panel panel-default">	
-		<div class="panel-heading">
-		DEJA UN COMENTARIO
-		</div>
-		<div class="panel-body">
-			<form  method="post" action="send.php">
-				<input class="form-control" type="text" placeholder="Nombre (Obligatorio)" name="nombre" required>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-6 col-md-offset-3">
+    	<h1 class="tituloSesion">Deja un comentario</h1>
+		<%=form_for(@mensaje) do |f|%>
+			<div class="field">
+				<%= f.email_field :email, :class => 'form-control', :placeholder => 'Correo electrónico' %>
+			</div>
 				<br>
-				<input class="form-control" type="email" placeholder="Correo Electrónico (Obligatorio)" name="correo" required>
-				<br>
-				<input class="form-control" type="text" placeholder="Página Web" name="web">
-				<br>
-				<textarea class="form-control" rows=6 placeholder="Ingrese aquí su Comentario..." name="coment" required></textarea>
-				<br>
-				<button id="boton" name="enviar" class="btn btn-default" input type="submit" value="Send">
-				<span class="glyphicon glyphicon-envelope"></span> Envíar</a>
-				</button>
-				<button id="boton" name="borrar" class="btn btn-default" input type="reset" value="Reset">
-				<span class="glyphicon glyphicon-remove"></span> Borrar</a>
-			</form>
-		</div>
-	</div>
+			<div class="actions">
+				<%= f.submit "Recuperar contraseña",:id => 'boton', :class => 'btn btn-lg btn-block' %>
+			</div>
+		<end%-->
+    </div>
+  </div>
+</div>
