--- a/app/app/views/requests/index.html.erb
+++ b/app/app/views/requests/index.html.erb
@@ -1,8 +1,11 @@
 <%- model_class = Request -%>
+
+<h1>Bienvenido <%= current_user.name%> <%= current_user.last_name%>!</h1>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 </div>
-<table class="table table-striped">
+
+<table class="table table-striped" id="tablaSolicitud">
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
