--- a/app/app/views/layouts/application.html.erb
+++ b/app/app/views/layouts/application.html.erb
@@ -71,8 +71,7 @@
 
     <section id="contenido">
     <article>
-        <p class="notice"><%= notice %></p>
-        <p class="alert"><%= alert %></p>
+        <%= bootstrap_flash %>
         <%= yield %>
     </article>
     <aside>
@@ -95,8 +94,6 @@
             <div class="panel-body">
                  <%= link_to "Facebook REASE", "https://es-es.facebook.com/reasechile", class:"linkInteres" %>
                  <%= link_to "CLAYSS", "http://www.clayss.org.ar/", class:"linkInteres" %>
-                 <%= link_to "CREAS - U. Alberto Hurtado", "http://creas.uahurtado.cl/2012/04/documentos-sobre-educacion.html", class:"linkInteres" %>
-                 <%= link_to "Maristas Chile", "http://www.maristas.cl/evangelizacion_explicita/aprendizaje_servicio", class:"linkInteres" %>
                  <%= link_to "Creador del A+S", "http://www.cehd.umn.edu/olpd/people/faculty/Furco.asp", class:"linkInteres" %>
                  <%= link_to "El aprendizaje-servicio por Andrew Furco", "http://educacionglobalresearch.net/wp-content/uploads/03-Furco-1-Castellano.pdf", class:"linkInteres" %>
 
