--- a/app/views/presentation/hacemos.html.erb
+++ b/app/views/presentation/hacemos.html.erb
@@ -1,5 +1,16 @@
 <h1>¿Qué hacemos?</h1>
-	<div class="panel panel-default" id = "panelHacemos">
+<p>
+La Red Nacional de Aprendizaje y Servicio Chile a definido su rol a desempeñar a base de cuatro directrices, las cuales son: 
+</p>
+<center>
+	<button id="botonHacemos" class = "btn btn-lg" onclick="menu1()">Misión</button> 
+	<button id="botonHacemos" class = "btn btn-lg" onclick="menu2()">Visión</button> 
+	<button id="botonHacemos" class = "btn btn-lg" onclick="menu3()">Valores</button> 
+	<button id="botonHacemos" class = "btn btn-lg" onclick="menu4()">Objetivos</button> 
+</center>
+
+<div id="mision">
+	<div class="panel panel-default" id="panelAside">
 		<div class="panel-heading">
 			Misión
 		</div>
@@ -7,8 +18,11 @@
 			<p>Somos una red solidaria formada por instituciones de educación, profesores, estudiantes, organizaciones sociales y privadas; que buscamos desarrollar, sistematizar y promover el enfoque metodológico de “Aprendizaje Servicio”; a través de la investigación e intercambio de herramientas y experiencias entre los integrantes de la red; en función de la innovación en el proceso de enseñanza/aprendizaje y el trabajo colaborativo en lo social.</p>
 		</div>
 	</div>
+</div>
+		
 
-	<div class="panel panel-default" id = "panelHacemos">
+<div id="vision">
+	<div class="panel panel-default" id="panelAside">
 		<div class="panel-heading">
 			Visión
 		</div>
@@ -16,8 +30,11 @@
 			<p>Ser referente para la educación, posicionándonos como la red de “Aprendizaje Servicio” que promueve políticas de innovación educacional que aportan a la realidad nacional.</p>
 		</div>
 	</div>
+</div>
 
-	<div class="panel panel-default" id = "panelHacemos">
+
+<div id="valores">
+	<div class="panel panel-default" id="panelAside">
 		<div class="panel-heading">
 			Valores
 		</div>
@@ -32,8 +49,11 @@
 			</ul>
 		</div>
 	</div>
+</div>
 
-	<div class="panel panel-default" id = "panelHacemos">
+
+<div id="objetivos">
+	<div class="panel panel-default" id="panelAside">
 		<div class="panel-heading">
 			Objetivos
 		</div>
@@ -47,3 +67,10 @@
 			</lu>
 		</div>
 	</div>
+</div>
+<script type="text/javascript">
+	document.getElementById('mision').style.display='block';
+	document.getElementById('vision').style.display='none';
+	document.getElementById('valores').style.display='none';
+	document.getElementById('objetivos').style.display='none';
+</script>
