--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,6 +45,7 @@
 
     <section id="contenido">
     <article>
+        <%= render_breadcrumbs %>
         <%= bootstrap_flash %>
         <%= yield %>
     </article>
