--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -9,25 +9,31 @@ a:hover
 	font-weight: bold;
 	text-decoration: none;
 }
+section#contenedor
+{
+	margin: 0.25em auto;
+	padding: 0;
+	text-align: center;
+}
+section#principal, aside
+{
+	display: inline-block;
+	margin: 0.25 auto;
+	min-width: 800px;
+	min-height: 400px;
+	padding: 0.25em;
+	vertical-align: top;
+	width: 70%%;
+}
 article
 {
-	display: block;
-	margin: 0;
-	padding: 0;
-	margin-left: 3%;
-	width: 65%;
-	float: left;
-
+	min-height: 140px;
+	padding: 0.25em;
 }
 aside
 {
-	display: block;
-	margin: 0;
-	padding: 0;
-	margin-right: 3%;
 	width: 25%;
-	float: right;
-
+	min-width: 300px;
 }
 body
 {
@@ -42,11 +48,9 @@ body
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#30aaaa',GradientType=1 );
 	color: black;
 	font-family: 'Segoe UI', sans-serif;
-	font-size: 16px;
+	font-size: 15px;
 
 }
-/*p Texto en párrafos
-*/
 
 footer
 {
@@ -89,6 +93,10 @@ p
 	text-align: justify;
 	margin: 2%;
 }
+.breadcrumb
+{
+	text-align: left;
+}
 .carousel
 {
 	width: 50%;
@@ -112,6 +120,7 @@ p
     margin-left: auto;
     margin-right: auto;
 }
+
 .linkInteres, .linkInteres:visited
 {
 	text-align: center;
@@ -121,6 +130,34 @@ p
 .modal-estatuto
 {
 	min-width: 90%;
+}
+.navbar-default .navbar-nav>li>a
+{
+	-webkit-box-shadow: 0px 0px 1px #666666;
+	color: white;
+}
+
+.navbar-default .navbar-nav>li>a:hover
+{
+	background: #ffffff;
+	background-image: -webkit-linear-gradient(top, #ffffff, #30bbbb);
+	background-image: -moz-linear-gradient(top, #ffffff, #30bbbb);
+	background-image: -ms-linear-gradient(top, #ffffff, #30bbbb);
+	background-image: -o-linear-gradient(top, #ffffff, #30bbbb);
+	background-image: linear-gradient(to bottom, #ffffff, #30bbbb);
+	color: #999;
+}
+.navbar-default .navbar-nav>.active>a
+{
+	background: white;
+	color: #999;
+}
+p.navbar-text.navbar-right
+{
+	color:white;
+	padding: 0;
+	margin: 0;
+	line-height: 50px;
 }
 #aceptar
 {
@@ -169,20 +206,6 @@ p
 {
  vertical-align: middle;
  float: right;
-}
-#BarraNavegadora > li > a
-{
-	-webkit-box-shadow: 0px 0px 1px #666666;
-}
-
-#BarraNavegadora > li > a:hover
-{
-	background: #ffffff;
-	background-image: -webkit-linear-gradient(top, #ffffff, #30bbbb);
-	background-image: -moz-linear-gradient(top, #ffffff, #30bbbb);
-	background-image: -ms-linear-gradient(top, #ffffff, #30bbbb);
-	background-image: -o-linear-gradient(top, #ffffff, #30bbbb);
-	background-image: linear-gradient(to bottom, #ffffff, #30bbbb);
 }
 #botonCerrar
 {
@@ -285,8 +308,17 @@ p
 	max-width: 65%;
 	display: block;
 }
+#logoNav
+{
+	margin-top:8px;
+	margin-right: 10px;
+	margin-right: 5px;
+	max-height: 40px;
+}
 #logout
 {
+
+	color: red;
 	float: right !important;
 }
 #pies
@@ -338,7 +370,44 @@ p
 {
 	background: #30bbbb;
 }
+#rightBar, #rightBar:active
+{
+	color: white;
+}
+#rightBar:hover
+{
+	font-weight: bold;
+	font-size: 18px;
+}
 *:focus
 {
 	outline: none !important;
+}
+
+@media(max-width:1200px)  {
+
+    .navbar-collapse.collapse {
+        display: none !important;
+    }
+
+    .navbar-collapse {
+        overflow-x: visible !important;
+    }
+
+    .navbar-collapse.in {
+      overflow-y: auto !important;
+    }
+
+    .collapse.in {
+      display: block !important;
+    }
+
+   .navbar-toggle { 
+   	display: block !important; 
+   	} 
+   	.navbar-header { 
+   		width: 100%; 
+   		height: 60px; 
+   	}
+
 }
