--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,84 +1,83 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "REASE" %></title>
-    <link href='http://fonts.googleapis.com/css?family=Pontano+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <%= csrf_meta_tags %>
+	<html>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title><%= content_for?(:title) ? yield(:title) : "REASE" %></title>
+		<link href='http://fonts.googleapis.com/css?family=Pontano+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+		<%= csrf_meta_tags %>
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-    <!--[if lt IE 9]>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
-    <![endif]-->
+		<!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+		<!--[if lt IE 9]>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
+		<![endif]-->
 
-    <%= stylesheet_link_tag "application", :media => "all" %>
+		<%= stylesheet_link_tag "application", :media => "all" %>
 
-    <!-- For third-generation iPad with high-resolution Retina display: -->
-    <!-- Size should be 144 x 144 pixels -->
-    <%= favicon_link_tag 'apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144' %>
+		<!-- For third-generation iPad with high-resolution Retina display: -->
+		<!-- Size should be 144 x 144 pixels -->
+		<%= favicon_link_tag 'apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144' %>
 
-    <!-- For iPhone with high-resolution Retina display: -->
-    <!-- Size should be 114 x 114 pixels -->
-    <%= favicon_link_tag 'apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114' %>
+		<!-- For iPhone with high-resolution Retina display: -->
+		<!-- Size should be 114 x 114 pixels -->
+		<%= favicon_link_tag 'apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114' %>
 
-    <!-- For first- and second-generation iPad: -->
-    <!-- Size should be 72 x 72 pixels -->
-    <%= favicon_link_tag 'apple-touch-icon-72x72-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '72x72' %>
+		<!-- For first- and second-generation iPad: -->
+		<!-- Size should be 72 x 72 pixels -->
+		<%= favicon_link_tag 'apple-touch-icon-72x72-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '72x72' %>
 
-    <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
-    <!-- Size should be 57 x 57 pixels -->
-    <%= favicon_link_tag 'apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png' %>
+		<!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+		<!-- Size should be 57 x 57 pixels -->
+		<%= favicon_link_tag 'apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png' %>
 
-    <!-- For all other devices -->
-    <!-- Size should be 32 x 32 pixels -->
-    <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
+		<!-- For all other devices -->
+		<!-- Size should be 32 x 32 pixels -->
+		<%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
 
-    <%= javascript_include_tag "application" %>
-  </head>
-<body>
+		<%= javascript_include_tag "application" %>
+		</head>
+	<body>
 
-    <header>
-    <%= render "partials/navigation"%>
-    </header>
+	<header>
+		<%= render "partials/navigation"%>
+	</header>
 
-    <section id="contenido">
-    <article>
-        <%= render_breadcrumbs %>
-        <%= bootstrap_flash %>
-        <%= yield %>
-    </article>
-    <aside>
-        <%= link_to(image_tag("LogoRease.png", id: "logo"),root_path) %>
-        
-        <%= render "partials/intranet"%>
+	<section id="contenedor">
+		<section id="principal">
+			<article>
+				<%= render_breadcrumbs %>
+				<%= bootstrap_flash %>
+				<%= yield %>
+			</article>
+		</section>
+		<aside>
+			<%= link_to(image_tag("LogoRease.png", id: "logo"),root_path) %>
 
-        <div id="panelAside" class="panel panel-default">
-            <div class="panel-heading">
-                Links de interés
-            </div>
-            <div class="panel-body">
-                 <%= link_to "Facebook REASE", "https://es-es.facebook.com/reasechile", class:"linkInteres" %>
-                 <%= link_to "CLAYSS", "http://www.clayss.org.ar/", class:"linkInteres" %>
-                 <%= link_to "CLAYSS en youtube", "https://www.youtube.com/channel/UCfjT6MIfaghMrdw7NCDICcQ", class:"linkInteres" %>
-                 <%= link_to "Creador del A+S", "http://www.cehd.umn.edu/olpd/people/faculty/Furco.asp", class:"linkInteres" %>
-                 <%= link_to "El aprendizaje-servicio por Andrew Furco", "http://educacionglobalresearch.net/wp-content/uploads/03-Furco-1-Castellano.pdf", class:"linkInteres" %>
+			<%= render "partials/intranet"%>
 
-                 
+			<div id="panelAside" class="panel panel-default">
+				<div class="panel-heading">
+					Links de interés
+				</div>
+				<div class="panel-body">
+					<%= link_to "Facebook REASE", "https://es-es.facebook.com/reasechile", class:"linkInteres" %>
+					<%= link_to "CLAYSS", "http://www.clayss.org.ar/", class:"linkInteres" %>
+					<%= link_to "CLAYSS en youtube", "https://www.youtube.com/channel/UCfjT6MIfaghMrdw7NCDICcQ", class:"linkInteres" %>
+					<%= link_to "Creador del A+S", "http://www.cehd.umn.edu/olpd/people/faculty/Furco.asp", class:"linkInteres" %>
+					<%= link_to "El aprendizaje-servicio por Andrew Furco", "http://educacionglobalresearch.net/wp-content/uploads/03-Furco-1-Castellano.pdf", class:"linkInteres" %>
+				</div>
+			</div>
+		</aside>
+	</section>
 
-            </div>
-        </div>
-    </aside>
-</section>
+	<footer>
+		<!--Pie de página-->
+		<div  id="pies" class = "navbar-default ">
+			REASE - Red Nacional de Aprendizaje y Servicio<br>
+			Contacto: reasechile@gmail.com
+		</div>
+	</footer>
 
-    <footer>
-        <!--Pie de página-->
-        <div  id="pies" class = "navbar-default ">
-                REASE - Red Nacional de Aprendizaje y Servicio<br>
-                Contacto: reasechile@gmail.com
-        </div>
-    </footer>
-
-    </body>
+	</body>
 </html>
