--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -1,70 +1,76 @@
-<nav>
-	<ul id="BarraNavegadora" class="nav nav-tabs navbar-fixed-top">
-		<li role="presentation" class="<%= 'active' if current_page?(root_path) %>">
-			<%= link_to "Inicio", root_path %>
-		</li>
+<nav id="BarraNavegadora" class="navbar navbar-default">
+	<div class="container-fluid">
+		<!-- Brand and toggle get grouped for better mobile display -->
+		<div class="navbar-header">
+			<%= link_to(image_tag("logoblanco.png", id: "logoNav"),root_path) %>
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false" id="boton">
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+		</div>
 
-		<% if !user_signed_in? %>
-			<li role="presentation" class="<%= 'active' if current_page?(presentation_aprendizaje_path) %>">
-				<%= link_to "¿Qué es A+S?", presentation_aprendizaje_path %>
-			</li>
+		<!-- Collect the nav links, forms, and other content for toggling -->
 
-			<li role="presentation" class="<%= 'active' if current_page?(presentation_hacemos_path) %>">
-				<%= link_to "¿Qué hacemos?", presentation_hacemos_path %>
-			</li>
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<ul class="nav navbar-nav" >
+				<li role="presentation" class="<%= 'active' if current_page?(root_path) %>">
+					<%= link_to "Inicio", root_path %>
+				</li>
+				<% if !user_signed_in? %>
+				<li role="presentation" class="<%= 'active' if current_page?(presentation_aprendizaje_path) %>">
+					<%= link_to "¿Qué es A+S?", presentation_aprendizaje_path %>
+				</li>
 
-			<li role="presentation" class="<%= 'active' if current_page?(presentation_somos_path) %>">
-				<%= link_to "¿Quiénes somos?", presentation_somos_path %>
-			</li>
+				<li role="presentation" class="<%= 'active' if current_page?(presentation_hacemos_path) %>">
+					<%= link_to "¿Qué hacemos?", presentation_hacemos_path %>
+				</li>
 
-			<li role="presentation" class="<%= 'active' if current_page?(presentation_estatutos_path) %>">
-				<%= link_to "Estatutos", presentation_estatutos_path %>
-			</li>
+				<li role="presentation" class="<%= 'active' if current_page?(presentation_somos_path) %>">
+					<%= link_to "¿Quiénes somos?", presentation_somos_path %>
+				</li>
 
-			<li role="presentation" class="<%= 'active' if current_page?(presentation_contacto_path) %>">
-				<%= link_to "Contacto", root_path %>
-			</li>
+				<li role="presentation" class="<%= 'active' if current_page?(presentation_estatutos_path) %>">
+					<%= link_to "Estatutos", presentation_estatutos_path %>
+				</li>
 
-			<li id="contadorUsuarios">
-				Miembros activos: <%= User.count %>
-			</li>
+				<li role="presentation" class="<%= 'active' if current_page?(presentation_contacto_path) %>">
+					<%= link_to "Contacto", root_path %>
+				</li>
+			</ul>
+			<p class="navbar-text navbar-right">Miembros activos: <%= User.count %> </p>
+				<%else%>
 
-		<%else%>
-			
-			<li role="presentation" class="<%= 'active' if current_page?(presentation_estatutos_path) %>">
-				<%= link_to "Estatutos", presentation_estatutos_path %>
-			</li>
+				<li role="presentation" class="<%= 'active' if current_page?(presentation_estatutos_path) %>">
+					<%= link_to "Estatutos", presentation_estatutos_path %>
+				</li>
 
-			<li role="presentation" class="<%= 'active' if current_page?(requests_path) %>">
-				<%= link_to "Solicitudes de Servicio", requests_path %>
-			</li>
+				<li role="presentation" class="<%= 'active' if current_page?(requests_path) %>">
+					<%= link_to "Solicitudes", requests_path %>
+				</li>
 
-			<li role="presentation">
-				<%= link_to "Experiencias", root_path %>
-			</li>
+				<li role="presentation">
+					<%= link_to "Experiencias", root_path %>
+				</li>
 
-			<li role="presentation">
-				<%= link_to "Reuniones", root_path %>
-			</li>
+				<li role="presentation">
+					<%= link_to "Reuniones", root_path %>
+				</li>
 
-			<li role="presentation">
-				<%= link_to "Eventos", root_path %>
-			</li>
+				<li role="presentation">
+					<%= link_to "Eventos", root_path %>
+				</li>
 
-			<li role="presentation">
-				<%= link_to "Recursos", root_path %>
-			</li>
+				<li role="presentation">
+					<%= link_to "Recursos", root_path %>
+				</li>
 
-			<li role="presentation" id="logout">
-				<%= link_to "Desconectarse", destroy_user_session_path, :method => :delete, id:"logout"%>
-			</li>
-			<li role="presentation" id="logout">
-				<a>Bienvenido <%= current_user.name%></a>
-			</li>
-			<li id="contadorUsuarios">
-				Miembros activos: <%= User.count %>
-			</li>
-		<%end%>
-
-	</ul>
+			</ul>
+			<p class="navbar-text navbar-right">| Hola <%=link_to current_user.name, root_path, :id=>'rightBar'%> 
+			|
+			<%= link_to "Desconectarse", destroy_user_session_path, :method => :delete, :id=>'rightBar'%> |</p>
+			<%end%>
+		</div><!-- /.navbar-collapse -->
+	</div><!-- /.container-fluid -->
 </nav>
