--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,7 +1,7 @@
 <% if user_signed_in? %>
 	<%= link_to 'Nuevo evento', new_event_path , :id => "botonCRUD", :class => "btn btn-lg"%>
 <% end %>
-<div id="panelAside" class="panel panel-default">
+<div id="panelRease" class="panel panel-default">
 	<div class="panel-heading">
 		Calendario de eventos
 
