--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,7 +57,7 @@
 			<%= render "partials/intranet"%>
 
 			
-			<div id="panelAside" class="panel panel-default">
+			<div id="panelRease" class="panel panel-default">
 				<div class="panel-heading">
 					<%= link_to "Calendario de eventos", events_path, :id => "calendarPanelTitle"%>
 				</div>
@@ -67,8 +67,8 @@
 
 			<% if !user_signed_in? %>
 				<%if !@sections.blank? %> 
-				<div id="panelAside" class="panel panel-default" data-toggle="collapse" data-target="#cuerpoLI">
-					<div class="panel-heading">
+				<div id="panelRease" class="panel panel-default" >
+					<div class="panel-heading" data-toggle="collapse" data-target="#cuerpoLI">
 						Links de interés
 					</div>
 					<div class="collapse" id="cuerpoLI">
