--- a/app/views/presentation/_estatutos.html.erb
+++ b/app/views/presentation/_estatutos.html.erb
@@ -1,7 +1,7 @@
 
 <div id="titulo2">
 	<br>
-	<div id="panelAside" class="panel panel-default">	
+	<div id="panelRease" class="panel panel-default">	
 		<div class="panel-heading">
 			TÍTULO II: DE LOS FINES
 		</div>
@@ -62,7 +62,7 @@
 </div>
 <div id="titulo3">
 	<br>
-	<div id="panelAside" class="panel panel-default">	
+	<div id="panelRease" class="panel panel-default">	
 		<div class="panel-heading">
 			TÍTULO III: DE LOS ASOCIADOS
 		</div>
@@ -126,7 +126,7 @@
 </div>
 <div id="titulo4">
 	<br>
-	<div id="panelAside" class="panel panel-default">	
+	<div id="panelRease" class="panel panel-default">	
 		<div class="panel-heading">
 			TÍTULO IV: ÓRGANOS DE ADMINISTRACIÓN Y SUS ATRIBUCIONES
 		</div>
