--- a/app/views/presentation/estatutos.html.erb
+++ b/app/views/presentation/estatutos.html.erb
@@ -2,7 +2,7 @@
 
 <div id="indice">
 	<br>
-	<div id="panelAside" class="panel panel-default">	
+	<div id="panelRease" class="panel panel-default">	
 		<div class="panel-heading">
 			Índice del estatuto
 		</div>
@@ -23,7 +23,7 @@
 	<%if seccion.order == 'Estatutos'%>
 		<% div_id = seccion.id -%>
 		<div id="titulo<%= div_id -%>" >
-			<div id="panelAside" class="panel panel-default">
+			<div id="panelRease" class="panel panel-default">
 				<div class="panel-heading">
 					<%=	seccion.title %> 
 				</div>
