--- a/app/views/presentation/index.html.erb
+++ b/app/views/presentation/index.html.erb
@@ -3,7 +3,7 @@
 <% @sections.each do |seccion| %>
 	<%if seccion.order == "Novedad"%>
 		<%if seccion.priority =="Alta" %>		
-			<div id="panelAside" class="panel panel-default">
+			<div id="panelRease" class="panel panel-default">
 				<div class="panel-heading">
 					<%= seccion.title %>
 				</div>
@@ -17,7 +17,7 @@
 <% @sections.each do |seccion| %>
 	<%if seccion.order == "Novedad"%>
 		<%if seccion.priority =="Media" %>		
-			<div id="panelAside" class="panel panel-default">
+			<div id="panelRease" class="panel panel-default">
 				<div class="panel-heading">
 					<%= seccion.title %>
 				</div>
@@ -31,7 +31,7 @@
 <% @sections.each do |seccion| %>
 	<%if seccion.order == "Novedad"%>
 		<%if seccion.priority =="Baja" %>		
-			<div id="panelAside" class="panel panel-default">
+			<div id="panelRease" class="panel panel-default">
 				<div class="panel-heading">
 					<%= seccion.title %>
 				</div>
