--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -16,7 +16,7 @@
 	</div>
 	<% end %>
 
-	<div class="panel panel-default" id="panelAside">
+	<div class="panel panel-default" id="panelRease">
     	<div class="panel-heading">Datos de la solicitud</div>
     	<div class="panel-body">
     		
