--- a/app/views/sections/estatutos.erb
+++ b/app/views/sections/estatutos.erb
@@ -1,4 +1,4 @@
-<div class="panel panel-default" id="panelAside">
+<div class="panel panel-default" id="panelRease">
 	<div class="panel-heading">
 		Crear una nueva sección de estutos
 	</div>
