--- a/app/views/sections/linkInteres.html.erb
+++ b/app/views/sections/linkInteres.html.erb
@@ -2,7 +2,7 @@
 <%= render "muestra", {orden: "Link de Interés", eliminar: "Si"} %>
 
 <%if @sections.blank?%>
-	<div class="panel panel-default" id="panelAside">
+	<div class="panel panel-default" id="panelRease">
 		<div class="panel-heading">
 			Crear nuevos links de interés
 		</div>
