--- a/app/views/institutions/show.html.erb
+++ b/app/views/institutions/show.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<div class="panel panel-default" id="panelAside">
+<div class="panel panel-default" id="panelRease">
 	<div class="panel-heading">
 		<%= @institution.name %>
 	</div>
