--- a/app/views/offerings/_form.html.erb
+++ b/app/views/offerings/_form.html.erb
@@ -12,7 +12,7 @@
     </div>
   <% end %>
 
-<div class="panel panel-default" id="panelAside">
+<div class="panel panel-default" id="panelRease">
     <div class="panel-heading">Datos de la oferta</div>
     <div class="panel-body">
 
