--- a/app/views/partials/_intranet.html.erb
+++ b/app/views/partials/_intranet.html.erb
@@ -1,9 +1,9 @@
 <% if !user_signed_in? %>
-	<div id="panelAside" class="panel panel-default" data-toggle="collapse" data-target="#cuerpo">
-		<div class="panel-heading">
+	<div id="panelRease" class="panel panel-default">
+		<div class="panel-heading" data-toggle="collapse" data-target="#cuerpo">
 			Ingreso Intranet
 		</div>
-		<div class="collapse" id="cuerpo">
+		<div class="collapsing" id="cuerpo">
 			<div class="panel-body" id="styleSession" >
 		    	<%= render "devise/sessions/inicio_sesion" %>
 			</div>	
