--- a/app/views/presentation/somos.html.erb
+++ b/app/views/presentation/somos.html.erb
@@ -17,7 +17,7 @@ La Red Nacional de Aprendizaje y Servicio Chile reúne  a profesores, estudiante
 	<%if seccion.order == 'Somos'%>
 	<% titulo_id = seccion.id -%>
 	<div id="titulo<%= titulo_id -%>" >
-		<div id="panelAside" class="panel panel-default">
+		<div id="panelRease" class="panel panel-default">
 			<div class="panel-heading">
 				<%=	seccion.title %> 
 			</div>
