--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -12,7 +12,7 @@
     </div>
   <% end %>
 
-<div class="panel panel-default" id="panelRease">
+<div class="panel panel-default panelRease" >
     <div class="panel-heading">Datos del evento</div>
     <div class="panel-body">
 
