--- a/app/views/presentation/contacto.html.erb
+++ b/app/views/presentation/contacto.html.erb
@@ -21,7 +21,7 @@
 			<br>¡ Muchas gracias !<br>
 		</p>
 
-		<div id="panelComentario" class="panel panel-default">	
+		<div id="panelComentario" class="panel panel-default panelRease">	
 			<div class="panel-heading">
 			DEJA UN COMENTARIO
 			</div>
