--- a/app/views/presentation/hacemos.html.erb
+++ b/app/views/presentation/hacemos.html.erb
@@ -17,7 +17,7 @@ La Red Nacional de Aprendizaje y Servicio Chile a definido su rol a desempeñar 
 	<%if seccion.order == 'Hacemos'%>
 	<% titulo_id = seccion.id -%>
 	<div id="titulo<%= titulo_id -%>" >
-		<div id="panelRease" class="panel panel-default">
+		<div  class="panel panel-default panelRease">
 			<div class="panel-heading">
 				<%=	seccion.title %> 
 			</div>
