--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,4 +1,4 @@
-<div class="panel panel-default" id="panelRease">
+<div class="panel panel-default panelRease" >
   <div class="panel-heading">
     <%= @request.title %>
   </div>
