--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -1,4 +1,4 @@
-<div id="panelRease" class="panel panel-default">
+<div  class="panel panel-default panelRease">
 	<div class="panel-heading">
 		<%=	@section.title %>
 	</div>
