--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
 <!--h1 class="text-center login-title">Ingrese sus datos para conectarse a REASE</h1-->
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name),  html: {class: 'form'}) do |f| %>
 
-	<div class="panel panel-default" id="panelRease">
+	<div class="panel panel-default panelRease" >
 		<div class="panel-heading">Consentimiento para ser evaluado</div>
 		<div class="panel-body">
 			<div>
@@ -17,7 +17,7 @@
 		</div>
 	</div>
 
-	<div class="panel panel-default" id="panelRease">
+	<div class="panel panel-default panelRease" >
 		<div class="panel-heading">Datos personales</div>
 		<div class="panel-body">
 		
@@ -51,7 +51,7 @@
 		</div>
 	</div>
 
-	<div class="panel panel-default" id="panelRease">
+	<div class="panel panel-default panelRease" >
 		<div class="panel-heading">Identificación dentro de la red </div>
 		<div class="panel-body">
 
