--- a/app/views/institutions/_form.html.erb
+++ b/app/views/institutions/_form.html.erb
@@ -12,7 +12,7 @@
 		</div>
 	<% end %>
 
-<div class="panel panel-default" id="panelRease">
+<div class="panel panel-default panelRease" >
 	<div class="panel-heading">
 		<%=orden%> nueva institución
 	</div>
