--- a/app/views/partials/_intranet.html.erb
+++ b/app/views/partials/_intranet.html.erb
@@ -1,5 +1,5 @@
 <% if !user_signed_in? %>
-	<div id="panelRease" class="panel panel-default">
+	<div  class="panel panel-default panelRease">
 		<div class="panel-heading" data-toggle="collapse" data-target="#cuerpo">
 			Ingreso Intranet
 		</div>
