--- a/app/views/presentation/aprendizaje.html.erb
+++ b/app/views/presentation/aprendizaje.html.erb
@@ -2,7 +2,7 @@
 <% @sections.each do |seccion| %>
 	<%if seccion.order == "Aprendizaje y Servicio"%>
 		<%if seccion.priority =="Alta" %>		
-			<div id="panelRease" class="panel panel-default">
+			<div  class="panel panel-default panelRease">
 				<div class="panel-heading">
 					<%= seccion.title %>
 				</div>
@@ -16,7 +16,7 @@
 <% @sections.each do |seccion| %>
 	<%if seccion.order == "Aprendizaje y Servicio"%>
 		<%if seccion.priority =="Media" %>		
-			<div id="panelRease" class="panel panel-default">
+			<div  class="panel panel-default panelRease">
 				<div class="panel-heading">
 					<%= seccion.title %>
 				</div>
@@ -30,7 +30,7 @@
 <% @sections.each do |seccion| %>
 	<%if seccion.order == "Aprendizaje y Servicio"%>
 		<%if seccion.priority =="Baja" %>		
-			<div id="panelRease" class="panel panel-default">
+			<div  class="panel panel-default panelRease">
 				<div class="panel-heading">
 					<%= seccion.title %>
 				</div>
